Added other required endpoint

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -86,6 +86,12 @@
                 "FLASK_APP": "investors/app.py",
             },
             "justMyCode": true
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:3000",
         }
     ],
 }
